<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="asimov.uva.es.bluechat.controladoresVistas.ActivityPrincipal">

    <item
        android:id="@+id/action_bluetooth"
        android:title="@string/action_refrescar"
        android:orderInCategory="1"
        android:icon="@android:drawable/stat_notify_sync_noanim"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_crear_grupo"
        android:orderInCategory="2"
        android:title="@string/crear_grupo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ayuda"
        android:orderInCategory="4"
        android:title="@string/action_ajustes"
        app:showAsAction="never" />


</menu>
