<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/info_ayuda"
        android:layout_width="252dp"
        android:id="@+id/textView2"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_height="34dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.47000003" />

    <TextView
        android:text="@string/info_desc"
        android:layout_width="344dp"
        android:layout_height="68dp"
        android:id="@+id/textView3"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:text="@string/funciona_ayuda"
        android:layout_width="379dp"
        android:id="@+id/textView4"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.47" />

    <TextView
        android:text="@string/funcionamiento_descubrir"
        android:id="@+id/textView5"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="342dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        android:layout_marginBottom="24dp"
        android:layout_height="47dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:text="@string/funcionamiento_chats"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintLeft_toLeftOf="@+id/textView5"
        android:layout_width="342dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        android:layout_marginBottom="32dp" />

    <TextView
        android:text="@string/funcionamiento_refrescar"
        android:layout_height="41dp"
        android:id="@+id/textView7"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="352dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <TextView
        android:text="@string/funcionamiento_ajustes"
        android:layout_height="51dp"
        android:id="@+id/textView8"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView7"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView7"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.55"
        android:layout_width="346dp" />
</android.support.constraint.ConstraintLayout>