<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/boton_siguiente"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/selecciona_imagen"
            style="@style/Widget.AppCompat.Button"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:text="@string/bienvenida_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_bienvenida"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            app:layout_constraintHorizontal_bias="1.0" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/introduce_apodo"
            android:ems="10"
            android:id="@+id/apodo"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/text_bienvenida"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/text_bienvenida"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/text_bienvenida"
            android:layout_marginTop="24dp" />



        <TextView
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:id="@+id/solicitar_apodo"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:text="@string/select_image"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/apodo"
            app:layout_constraintLeft_toLeftOf="@+id/apodo" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="61dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imagen_perfil"
            android:layout_marginStart="104dp"
            app:layout_constraintLeft_toRightOf="@+id/selecciona_imagen"
            android:layout_marginLeft="104dp"
            app:layout_constraintBottom_toBottomOf="@+id/selecciona_imagen"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription"
            app:layout_constraintTop_toTopOf="@+id/selecciona_imagen" />

        <Button
            android:text="@string/search_image"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/selecciona_imagen"
            app:layout_constraintLeft_toLeftOf="@+id/solicitar_apodo"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/solicitar_apodo"
            style="@style/Widget.AppCompat.Button" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>