<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Button
        android:text="@string/next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/boton_info_siguiente"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text_informacion"
        app:layout_constraintVertical_bias="1.0" />

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:text="@string/agradecimiento"
    android:id="@+id/textView"
    android:layout_marginTop="8dp"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginStart="16dp"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginLeft="16dp"
    android:layout_marginEnd="16dp"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginRight="16dp"
    android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.25"></TextView>

    <TextView
        android:text="@string/info_aplicacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_informacion"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>